app-prd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: prd-iqs-services
  name: unidade-service
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: unidade-service
  replicas: 1
  minReadySeconds: 30
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: unidade-service
    spec:
      containers:
        - image: registry.digitalocean.com/iqs-site-applications-images/unidade-service:IMAGE_TAG
          imagePullPolicy: Always
          name: unidade-service
          volumeMounts:
            - name: mysql-cert
              mountPath: /etc/ssl/certs/do-mysql-cert.crt
              subPath: do-mysql-cert.crt
              readOnly: false
          resources:
            requests:
              cpu: 0.1
              memory: 128Mi
            limits:
              memory: 256Mi
              cpu: 0.2
          ports:
            - containerPort: 8080
      volumes:
        - name: mysql-cert
          configMap:
            name: mysql-cert
---
apiVersion: v1
kind: Service
metadata:
  namespace: prd-iqs-services
  name: unidade-service
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: unidade-service
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-unidade-service
  namespace: prd-iqs-services
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.informacaoquesalva.com.br
      secretName: letsencrypt-nginx
  rules:
    - host: api.informacaoquesalva.com.br
      http:
        paths:
          - path: /unidade
            pathType: Prefix
            backend:
              service:
                name: unidade-service
                port:
                  number: 8080
